fixed spacing on mobile devices

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -145,7 +145,7 @@
 @media (max-width: 768px) {
   .hero-section {
     margin-block-start: 4rem;
-    padding-inline: 2rem;
+    padding-inline: 1rem;
     padding-block-start: 2rem;
     /* flex-direction: column-reverse; */
   }
@@ -167,7 +167,7 @@
   }
   .hero-section > .left-side > .hero-cta-container {
     gap: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
   }
   .scroll-to-top {
     bottom: 2rem;
