--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -77,7 +77,7 @@
 
 @media (max-width: 768px) {
   .navbar-container {
-    padding-inline: 2rem;
+    padding-inline: 1rem;
     padding-block: 1rem;
     height: 4rem;
   }
